# Enigma

./: README.md
enigmatic-contracts/: truffle-config.js
enigmatic-contracts/contracts/: EnigmaChain.sol  EnigmaLib.sol
enigmatic-contracts/migrations/: 1_deploy_contracts.js
enigmatic-datahoarder/: contracts  manage.py  pyproject.toml
enigmatic-datahoarder/datahoard/: admin.py  apps.py  models.py  urls.py
enigmatic-datahoarder/datahoard/migrations/: 0001_initial.py
enigmatic-datahoarder/enigmaticdatahoarder/: asgi.py  settings.py  urls.py  wsgi.py
enigmatic-frontend/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
enigmatic-frontend/src/: index.html
enigmatic-frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
enigmatic-frontend/src/app/components/checkbalance/: checkbalance.component.html  checkbalance.component.spec.ts  checkbalance.component.ts
enigmatic-frontend/src/app/components/datasetpurchase/: datasetpurchase.component.html  datasetpurchase.component.spec.ts  datasetpurchase.component.ts
enigmatic-frontend/src/app/components/homepage/: homepage.component.html
enigmatic-frontend/src/app/services/: contract.service.ts
enigmatic-frontend/src/assets/: EnigmaChain.json
enigmatic-frontend/src/environments/: environment.prod.ts  environment.ts
