[tool.poetry]
name = "enigmatic-datahoarder"
version = "0.1.0"
description = ""
authors = ["Amardhruva N Prabhu <amaramardhruva@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "enigmatic_datahoarder"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.3"
djangorestframework = "^3.14.0"
markdown = "^3.4.1"
django-filter = "^22.1"
web3 = "^5.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
